--- a/src/main/resources/templates/koira.html
+++ b/src/main/resources/templates/koira.html
@@ -10,5 +10,6 @@
         <h1>Hei <span th:text="${koira.nimi}">koira</span>!</h1>
 
         <p>Olet saapunut koiran <span th:text="${koira.nimi}">koira</span> tietosivulle.</p>
+        <p>Sit tähän koiran syntymäaika ja omistaja sekä koiranäyttelysijoitukset</p>
     </body>
 </html>
